--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,5 +26,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build and Run Tests
-        run: mvn clean test -Dheadless=true
+      - name: Build
+        run: mvn clean install -DskipTests
+
