--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,23 +1,21 @@
 name: Java CI with Maven
 
-permissions:
-  contents: read
-  id-token: write
-  actions: read
-  dependency-graph: none
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -26,6 +24,5 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build
+      - name: Build without running tests
         run: mvn clean install -DskipTests
-
