--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,10 +35,11 @@ jobs:
         run: mvn clean test -Dheadless=true
 
       # ✅ Save test reports (Allure, Extent, etc.)
-      - name: Upload Extent Report
+      - name: Upload Surefire Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Extent-Report
-          path: reports/
+          name: Surefire-Reports
+          path: target/surefire-reports/
+
 
