--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,80 +6,34 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
 
     steps:
+      # Checkout code
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
+      # Set up JDK
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
 
-      - name: Cache Maven local repository
-        uses: actions/cache@v4
+      # Cache Maven dependencies
+      - name: Cache Maven packages
+        uses: actions/cache@v3
         with:
-          path: ~/.m2/repository
+          path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Install system packages
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y unzip wget xvfb ca-certificates
+      # Build and run tests
+      - name: Build with Maven
+        run: mvn clean install
 
-      - name: Install Google Chrome stable
-        run: |
-          set -eux
-          CHROME_DEB="google-chrome-stable_current_amd64.deb"
-          wget -q -O "${CHROME_DEB}" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
-          sudo apt-get install -y ./"${CHROME_DEB}"
-          rm -f "${CHROME_DEB}"
-        shell: bash
-
-      - name: Install matching ChromeDriver
-        run: |
-          set -eux
-          CHROME_VER="$(google-chrome --version | sed -E 's/.* ([0-9]+)\..*/\1/')"
-          echo "Chrome major version: $CHROME_VER"
-          RETRY_URL="https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VER}"
-          CHROMEDRIVER_VER="$(curl -fsSL --retry 5 --retry-delay 2 $RETRY_URL)"
-          echo "Using chromedriver version: $CHROMEDRIVER_VER"
-          CHROMEDRIVER_ZIP="chromedriver_linux64.zip"
-          wget -q -O "${CHROMEDRIVER_ZIP}" "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VER}/${CHROMEDRIVER_ZIP}"
-          unzip -q "${CHROMEDRIVER_ZIP}"
-          sudo mv -f chromedriver /usr/local/bin/chromedriver
-          sudo chmod +x /usr/local/bin/chromedriver
-          rm -f "${CHROMEDRIVER_ZIP}"
-        shell: bash
-
-      - name: Display versions
-        run: |
-          google-chrome --version || true
-          chromedriver --version || true
-          java -version
-        shell: bash
-
-      - name: Run Selenium Tests (Xvfb + Chrome)
-        env:
-          HEADLESS: true
-        run: |
-          xvfb-run -s "-screen 0 1920x1080x24" mvn -B -Dheadless=true -Dbrowser=chrome clean test
-        shell: bash
-
-      - name: Upload Surefire Reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: Surefire-Reports
-          path: target/surefire-reports/
+      - name: Run Selenium Tests
+        run: mvn test
