--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,18 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Set up JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Cache Maven dependencies
+      - name: Install Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -31,7 +33,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      # Build and run tests
       - name: Build with Maven
         run: mvn clean install
 
